--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -56,6 +56,12 @@
 	 	\bibitem{VB_TowardPlay}
 	 	van Benthem, J.; Pacuit, E; Roy, O. Toward a Theory of Play: A Logical Perspective on Games and Interaction. {\em GAMES} {\bf 2011}, {\em 2}, 52-86.
 	 	
+	 	\bibitem{Prior}
+	 	Prior, A. Time and Modality. Clarendon Press: Oxford, UK, 1957.
+	 	
+	 	\bibitem{Kripke}
+	 	Kripke, S. “Semantical Considerations on Modal Logic,” {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
+	 	
 	 	\bibitem{Rushby_Mode_Confusion}
 	 	Rushby, J. Using model checking to help discover mode confusions and other automation surprises. {\em Reliability Engineering and System Safety} {\bf 2002}, {\em 75}, 167-177.
 	 	
