--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -120,7 +120,7 @@ What other inferences can we make, based on our intuitive notion of necessity an
 
 It is obvious then that $\Box \varphi \iimplies \Diamond \varphi$ is a theorem. This states that if something is necessarily true then it is possibly true. What about the other direction: $\Diamond \varphi \iimplies \Box \varphi$? It turns out this is not a theorem under the typical notions of necessity and possibility. But this raises a question about how we would present a counterexample that disproves it. To do this, we need a semantics for the logic. The semantics we use are called \emph{possible world semantics}, and they are due to Saul Kripke~\cite{Kripke}. One would be hard-pressed to find a species of modal logic, whether in economics, computer science, or philosophy, that does not use possible world semantics in some form or another. Sometimes they are referred to as \emph{Kripke semantics}.
 
-In possible world semantics, a graph structure is created with worlds as nodes and accessibility relations among worlds as the edges in the graph. Propositional formulas are true or false at each world. These graph structures are typically called Kripke structures. We can define the following Kripke structure, $\mathcal{M} = \{W, R, V\}$, where $W$ is a finite set of worlds, $\{w, v\}$, $R$ is a binary accessibility relation defined on those worlds $\{(w,v), (v,w)\}$, meaning $w$ has access to $v$ and $v$ has access to $w$, and $V$ is a \emph{valuation} function that assigns $True$ or $False$ to every atomic proposition at every world. In our model we only care about the proposition $p$, and $V(p, w)=False$ while $V(p,v)=True$. The following figure illustrates $\mathcal{M}$:
+In possible world semantics, a graph structure is created with worlds as nodes and accessibility relations among worlds as the edges in the graph. Propositional formulas are true or false at each world. These graph structures are typically called Kripke structures. We can define the following Kripke structure, $\mathcal{M} = \{W, R, V\}$, where $W$ is a finite set of worlds, $\{w, v\}$, $R$ is a binary accessibility relation defined on those worlds $\{(w,v), (v,w)\}$, meaning $w$ has access to $v$ and $v$ has access to $w$, and $V$ is a \emph{valuation} function that assigns $True$ or $False$ to every atomic proposition at every world. In our model we only care about the proposition $p$, and $V(p, w)=False$, denoted by $\tlnot p$, while $V(p,v)=True$, denoted by $p$. The following figure illustrates $\mathcal{M}$:
 
 \begin{figure}[H]
 	\begin{center}
@@ -131,14 +131,16 @@ In possible world semantics, a graph structure is created with worlds as nodes a
 	\node[base node] (v) [right of=w] {$v: p$};
 	\path[]
 	(w) edge node[above] {$R$} (v)
-	(w) edge node[bend left] {$R$} (w)
-	(v) edge node[below] {} (w);
+	    edge [loop left] node {$R$} (w)
+	(v) edge node[below] {} (w)
+%	\draw [->] (v) edge[in=5,out=355,loop] node[right] {$R$} (v)
+	    edge [<-, loop right] node {$R$} (v);
 	\end{tikzpicture}
 	\end{center}
 	\caption{$\mathcal{M}$: A simple counterexample using possible world semantics.}
 \end{figure}
 
-According to possible world semantics, $\Box \varphi$ is true at a world, written $w \models \Box \varphi$ for world $w$, if and only if for all worlds $v$ such that $R(w,v)$ ($v$ is accessible to $w$ by the $R$ relation), $v \models \varphi$. This says a formula is necessarily true at a world if and only if it is true at all worlds accessible by that world. If a formula is true at all worlds in a model, then it is valid for that model, written $\mathcal{M} \models \varphi$. Clearly, if a formula is valid for a model, then it is necessarily true for each world in that model: $\mathcal{M} \models \varphi$ implies $w \models \Box \varphi$ for all worlds $w\in W$. In our model, $p$ is not valid: it is false at world $w$. So a
+According to possible world semantics, $\Box \varphi$ is true at a world, written $w \models \Box \varphi$ for world $w$, if and only if for all worlds $v$ such that $R(w,v)$ ($v$ is accessible to $w$ by the $R$ relation), $v \models \varphi$. This says a formula is necessarily true at a world if and only if it is true at all worlds accessible by that world. Similarly, $w \models \Diamond \varphi$ if and only if there is some world $v$ such that $R(w,v)$ and $v \models \varphi$. In $\mathcal{M}$, $w$ is $R$-accessible to itself, so there is a world accessible to $w$ where $p$ is false, and thus $w \models \tlnot \Box p$. However, since $v$ is $R$-accessible to $w$, and $v \models p$, it is true that $w \models \Diamond p$. Thus, we have $w \models \Diamond p$ and $w \models \tlnot \Box p$, a negation of $\Diamond p \iimplies \Box p$, so it cannot be the case that $\Diamond \varphi \iimplies \Box \varphi$ is a theorem, for arbitrary formula $\varphi$.
 
 %\subsection{Avionics and Formal Methods}
 \section{Logical Framework}~\label{logic_foundation}
